--- a/static_files/nodes/lndmon.css
+++ b/static_files/nodes/lndmon.css
@@ -53,3 +53,11 @@ table {
   line-height: 50px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+
+.colour-dot {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  display: inline-block;
+}
