--- a/nodes/templates/nodes/nodes_detail.html
+++ b/nodes/templates/nodes/nodes_detail.html
@@ -66,7 +66,7 @@
                 return value/total;
               },
               min:25,
-              max:1000
+              max:500
             },
             shapeProperties: {
               interpolation: false    // 'true' for intensive zooming
@@ -102,12 +102,13 @@
   </div>  <!-- Card -->
   <div class="card col-md-6" style="width: 48%;">
     <div class="card-body" style="overflow-y:scroll;">
-      <div class="card-title badge badge-success">
-            <h6>Data Collected at {{ date_logged.date_display }}</h6>
+      <div class="card-title">
+            <h7 class="btn btn-success disabled">Data Collected at {{ date_logged.date_display }}</h7>
+            <a href="/{{network}}/nodes/{{date_logged.date_unix}}" class="btn btn-outline-success btn-sm ">Node list</a>
+            <a href="/{{network}}/channels/{{date_logged.date_unix}}" class="btn btn-outline-success btn-sm ">Channel list</a>
+            <a href="/{{network}}/visualiser/{{date_logged.date_unix}}" class="btn btn-outline-success btn-sm ">Network graph at time</a>
       </div>
-      <a href="/{{network}}/nodes/{{date_logged.date_unix}}" class="btn btn-outline-success btn-sm ">Node list</a>
-      <a href="/{{network}}/channels/{{date_logged.date_unix}}" class="btn btn-outline-success btn-sm ">Channel list</a>
-      <a href="/{{network}}/visualiser/{{date_logged.date_unix}}" class="btn btn-outline-success btn-sm ">Network graph at time</a>
+
 
       <h6 class="card-subtitle mb-2 text-muted ">View at other times/dates (or click on points in the graphs below to explore the corresponding time)</h6>
       <div class="time-box">
@@ -167,10 +168,6 @@
 </div> <!-- Row -->
 
 
-</div>  <!-- Container metrics -->
-
-
-
 <table class="table table-striped table-sm table-details">
   <thead>
     <tr>
@@ -194,6 +191,7 @@
   </tbody>
 </table>
 
+</div>  <!-- Container metrics -->
 
 
 
