--- a/nodes/templates/nodes/search.html
+++ b/nodes/templates/nodes/search.html
@@ -6,8 +6,6 @@
 {% load static %}
 <script src="{% static "nodes/jsUtils.js" %}"></script>
 <link rel="stylesheet" href="{% static "nodes/lndmon.css" %}"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 
@@ -25,7 +23,7 @@
 <div class="card mx-auto" >
   <div class="card-body">
     <h5 class="card-title">Node ID: {{ nodeInfo.alias }}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">PubKey: <a href="/{{network}}/nodes/{{ nodeInfo.pub_key }}">  {{ nodeInfo.pub_key}}</a> </h6>
+    <h6 class="card-subtitle mb-2 text-muted">PubKey: <a href="/{{network}}/node/{{ nodeInfo.pub_key }}">  {{ nodeInfo.pub_key}}</a> </h6>
     <h6 class="card-subtitle mb-2 text-muted">Color {{ nodeInfo.color }} <span class="colour-dot" style="background-color: {{ nodeInfo.color }} "></span> </h6>
     <h6 class="card-subtitle mb-2 text-muted">Advertised addresses </h6>
     <p class="card-text">
